# kbuhist2

./: .gitignore  README.md  accelerate_llm_khubist.py  llm_khubist.py  llm_khubist_accerlate.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  testing.py
diachronic/: bert_accelerate_llm.py  bert_llm.py  byt5_t5.py  config.py  llm_inference.py
diachronic/data/: assemble_diachronic.py  get_diachronic.py  metadata_extract.py  zip_utils.py
diachronic/preprocess/: paragraph_chunker.py  preprocess_pipe.py  sentence_regex.py  word_cleaner.py
kbuhist/: accelerate_llm_kbuhist.py  bert_accelerate_llm.py  debug.py  llm_kbuhist.py
kbuhist/data/: assemble_kbuhist.py  get_kbuhist.py  metadata_extract.py
kbuhist/preprocess/: filtering_kbuhist.py  get_kbuhist.py  paragraph_chunker.py  prepreprocessing_kbuhist.py  preprocess_chunk.py  preprocess_pipe.py  preprocess_regex copy.py  preprocess_regex.py  sentence_regex.py  word_cleaner.py
kubhist/: accelerate_llm_khubist.py  llm_inference.py  prepreprocessing_khubist.py
tests/: test_paragraph_chunker.py  test_prepreprocessing_khubist.py  test_sentence_regex.py  test_word_cleaner copy.py  test_word_cleaner.py
